<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <Button
        android:id="@+id/button_perfil"
        android:layout_width="183dp"
        android:layout_height="68dp"
        android:layout_marginTop="180dp"
        android:hint="@string/button_perfil"
        android:onClick="launchProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/button_perfil" />
    <Button
        android:id="@+id/button_reserve"
        android:layout_width="183dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:hint="@string/button_reserve"
        android:onClick="launchReserve"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_turnos"
        tools:text="@string/button_reserve" />
    <Button
        android:id="@+id/button_profesionales"
        android:layout_width="183dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:hint="@string/button_profesionales"
        android:onClick="launchProfesionales"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_reserve"
        tools:text="@string/button_profesionales" />
    <Button
        android:id="@+id/button_turnos"
        android:layout_width="183dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:hint="@string/button_turnos"
        android:onClick="launchTurnos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_perfil"
        tools:text="@string/button_turnos" />

    <Button
        android:id="@+id/button_cerrar_sesion"
        android:layout_width="183dp"
        android:layout_height="68dp"
        android:layout_marginTop="16dp"
        android:hint="Cerrar Sesion"
        android:onClick="launchCerrar_Sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_profesionales"
        tools:text="Cerrar Sesion" />

</androidx.constraintlayout.widget.ConstraintLayout>